Fix waybar flicker and update gitconfig

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -57,12 +57,12 @@
   border-radius: 5px; /* Workspaces buttons are always rounded */
   padding: 0.3rem 0.6rem;
   background: transparent;
-  transition: all 0.2s ease-in-out;
+  /* transition: all 0.2s ease-in-out; */
   border: none;
   outline: none;
 }
 
-#workspaces button.active {
+#workspaces button.focused {
   color: #99d1db;
   background-color: rgba(153, 209, 219, 0.1);
   box-shadow: inset 0 0 0 1px rgba(153, 209, 219, 0.2);
